# madscience

./: .gitignore  CLAUDE.md  README.md  SCIENTIFIC-AI-MANIFESTO.md  SCIENTIFIC-AI-WORKFLOW.md
savethewhales/: CASE-STUDY.md  EXPERIMENT_DESIGN.md  README.md  SPRINT-LOG.md  coordinate_replacement_guide.txt  coordinate_validation_report.md  corrected_whale_coordinates.csv  enhanced_magnetic_analysis.csv  literature_magnetic_data.csv  magnetic_gradients.csv  plot_coordinates_map.py  pyproject.toml  requirements.txt  whale_stranding_quick_test.py  whale_stranding_validator.py
savethewhales/code/: bathymetry_analysis.py  bgs_magnetic_harvester.py  comprehensive_magnetic_analysis.py  coordinate_regeneration_tool.py  coordinate_verification_webapp.html  corrected_bgs_linear_transects.py  crustal_anomaly_analysis.py  enhanced_coordinate_verification.py  extract_more_magnetic_data.py  focused_hypothesis_testing.py  inclination_isoline_analysis.py  magnetic_gradient_visualizer.py  simple_coordinate_regenerator.py  stranding_risk_model.py  whale_stranding_quick_test.py
savethewhales/data/: Magnetic-Gradient-Data-2025-05-29.md  bgs_magnetic_survey_2025-05-31.csv  coordinate_verification.csv  crustal_anomaly_analysis_2026-03-24_00-05.csv  crustal_anomaly_analysis_2026-03-24_00-05.json  igrf14_linear_transects_2026-03-24_04-21.csv  igrf14_linear_transects_2026-03-24_04-21.json  igrf14_scale_sensitivity_2026-03-24_04-21.csv  inclination_isoline_analysis_2026-03-24_04-29.csv  inclination_isoline_analysis_2026-03-24_04-29.json  stranding_events.csv  whale_stranding_sites_verified.json  (+1 more)
(+15 files in other folders)
