[project]
name = "savethewhales"
version = "0.1.0"
description = "Scientific research project analyzing pilot whale mass strandings using magnetic field data"
requires-python = ">= 3.10"
dependencies = [
    "pandas >= 2, < 3",
    "numpy >= 1, < 3",
    "matplotlib >= 3, < 4",
    "seaborn >= 0.13, < 1",
    "scipy >= 1, < 2",
    "requests >= 2, < 3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
